# homelab

./: .gitignore  .pre-commit-config.yaml  .yamlfmt.yaml  README.md  docker-compose.ml.yml  docker-compose.yml  main.py  pyproject.toml  server-init.sh  setup-coral-amd.sh  setup-coral-tpu.sh  setup-docker.sh  setup-nvidia.sh  setup-storage.sh  setup-ubuntu.sh  setup.sh  todo.txt
ml-processor/: Dockerfile  docker-compose.yml
ml-processor/src/: main.py
ubuntu-cameras/: .gitignore  docker-compose.yml  llm.txt  server-init.sh
ubuntu-cameras/config/: config.yaml
ubuntu-cameras/mosquitto/config/: mosquitto.conf
ubuntu-cameras/nginx/conf.d/: frigate.conf  nginx.conf
