[project]
name = "homelab"
version = "0.1.0"
description = "Machine learning processor for Frigate security system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
  "opencv-python>=4.8.0",
  "paho-mqtt>=2.2.1",
  "sqlalchemy>=2.0.0",
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "psycopg2-binary>=2.9.9",
  "pillow>=10.0.0",
  "facenet-pytorch>=2.5.3",
  "insightface>=0.7.3",
  "deepface>=0.0.79",
  "requests>=2.31.0",
  "pydantic>=2.6.0",
  "pgvector>=0.2.3",
  "python-dotenv>=1.0.0",
  "loguru>=0.7.0",
  "tqdm>=4.66.0",
  "onnxruntime-gpu>=1.16.0",
]

[tool.uv]
# Development-only dependencies
dev-dependencies = [
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.8",
  "ruff>=0.6.0",
  "bandit>=1.7.9",
  "types-setuptools>=69.0.0; python_version<'3.11'",
]

[tool.ruff]
line-length = 112
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "__pypackages__"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.bandit]
skips = ["B101"]
exclude_dirs = [".venv", "tests"]
targets = ["."]
