[project]
name = "homelab"
version = "0.1.0"
description = "Machine learning processor for Frigate security system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "insightface>=0.7.3",
  "loguru>=0.7.0",
  "numpy>=1.24.0",
  "onnxruntime-gpu>=1.16.0",
  "opencv-python>=4.8.0",
  "paho-mqtt>=2.2.1",
  "pgvector>=0.2.3",
  "psycopg2-binary>=2.9.9",
  "requests>=2.31.0",
  "sqlalchemy>=2.0.0",
  "torch>=2.1.0",
]

[tool.uv]
# Development-only dependencies
dev-dependencies = [
  "bandit>=1.7.9",
  "mypy>=1.8",
  "pre-commit>=3.7",
  "pytest-cov>=5.0",
  "pytest>=8.0",
  "ruff>=0.6.0",
  "types-setuptools>=69.0.0; python_version<'3.11'",
]

[tool.ruff]
line-length = 112
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "__pypackages__"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.bandit]
skips = ["B101"]
exclude_dirs = [".venv", "tests"]
targets = ["."]
